--- a/userContent.css
+++ b/userContent.css
@@ -14,7 +14,7 @@ p, .p {
 color: #ddd !important;
 }
 
-b, .b {
+b, em, i, mark, u, .em, .b, .i, .mark, .u {
 color: #ffabab !important;
 }
 
@@ -22,11 +22,11 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 color: #85e3ff !important;
 }
 
-ul, ol, li, dl, dt, dd, optgroup, .ul, .ol, .li, .dl, .dt, .dd, .optgroup {
+ul, ol, li, del, dt, dd, optgroup, dl, .ul, .ol, .li, .del, .dt, .dd, .optgroup, .dl {
 color: #f6a6ff !important;
 }
 
-table, td, th, tr, col, caption, thead, tbody, tfoot, .table, .td, .th, .tr, .col, .caption, .thead, .tbody, .tfoot {
+table, td, th, tr, col, caption, thead, tbody, tfoot, colgroup, dialog, .table, .td, .th, .tr, .col, .caption, .thead, .tbody, .tfoot, .colgroup, .dialog {
 background-color: #222 !important;
 color: #ddd !important;
 }
@@ -45,12 +45,12 @@ background-color: #111 !important;
 /* filter: invert(0%) !important; */
 /* } */
 
-code, blockquote, .code, .blockquote {
+code, blockquote, q, nav, sup, sub, .code, .blockquote, .q, .nav, .sup, .sub {
 background-color: #333 !important;
 color: gold !important;
 }
 
-label, textarea, form, select, input, q, dialog, .label, .textarea, .form, .select, .input, .q, .dialog {
+label, textarea, form, select, input, dialog, .label, .textarea, .form, .select, .input, .dialog {
 background-color: #333 !important;
 color: #ddd !important;
 }
