--- a/userContent.css
+++ b/userContent.css
@@ -1,9 +1,9 @@
 body, .body {
-background-color: #111 !important; /* background color */
-background: #111 !important; /* background color */
-background-image: linear-gradient(#222,#111) !important; /* background gradient, it used on some websites */
-color: #ddd !important;  /* text color */
-opacity: .90 !important;  /* make everything on the page 90% brightness */
+background-color: rgb(17, 17, 17) !important; /* background color */
+background: rgb(17, 17, 17) !important; /* background color */
+background-image: linear-gradient(rgb(34, 34, 34),rgb(17, 17, 17)) !important; /* background gradient, it used on some websites */
+color: rgb(221, 221, 221) !important; /* text color */
+opacity: .90 !important; /* make everything on the page 90% brightness */
 }
 
 /* html div span {
@@ -11,72 +11,69 @@ scrollbar-color: hotpink cyan !important;
 } */
 
 p, .p {
-color: #ddd !important;  /* text color */
+color: rgb(221, 221, 221) !important; /* text color */
 }
 
 b, em, i, mark, u, .em, .b, .i, .mark, .u {
-color: #ffabab !important;  /* color for bold text and glyphs */
+color: rgba(255, 171, 171, 1) !important; /* color for bold text and glyphs */
 }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-color: #85e3ff !important;  /* color for all header sizes */
+color: rgba(133, 227, 255, 1) !important; /* color for all header sizes */
 }
 
 ul, ol, li, del, dt, dd, optgroup, dl, .ul, .ol, .li, .del, .dt, .dd, .optgroup, .dl {
-color: #f6a6ff !important;  /* color for all list types */
+color: rgba(246, 166, 255, 1) !important; /* color for all list types */
 }
 
 table, td, th, tr, col, caption, thead, tbody, tfoot, colgroup, dialog, .table, .td, .th, .tr, .col, .caption, .thead, .tbody, .tfoot, .colgroup, .dialog {
-background-color: #222 !important;   /* background color for all tables */
-color: #ddd !important;   /* color for all tables */
+background-color: rgb(34, 34, 34) !important; /* background color for all tables */
+color: rgb(221, 221, 221) !important; /* color for all tables */
 }
 
 img, .img {
-filter: brightness(.75) !important;   /* make all images have 75% brightness */
-background: #111 !important;   /* background color of loading images (not all images use this) */
-background-color: #111 !important;   /* background color of loading images (not all images use this) */
-/* background-image: linear-gradient(#222,#111) !important; */
-/* filter: invert(75%) !important; */
-/* transition: opacity .5s ease-in-out !important; */
+filter: brightness(.75) !important; /* make all images have 75% brightness */
+background: rgb(17, 17, 17)!important; /* background color of loading images (not all images use this) */
+background-color: rgb(17, 17, 17) !important; /* background color of loading images (not all images use this) */
 }
 
 /* img:hover { */
-/* filter: brightness(1) !important; */
-/* filter: invert(0%) !important; */
+/* transition: 0.5s !important; */
+/* filter: brightness(1) !important */
 /* } */
 
 code, blockquote, q, nav, sup, sub, .code, .blockquote, .q, .nav, .sup, .sub {
-background-color: #333 !important; /* background color for code snippets and quotes */
-color: gold !important; /* color for code snippets and quotes */
+background-color: rgb(51, 51, 51) !important; /* background color for code snippets and quotes */
+color: rgba(255, 217, 0, 1) !important; /* color for code snippets and quotes */
 }
 
 label, textarea, form, select, input, dialog, .label, .textarea, .form, .select, .input, .dialog {
-background-color: #333 !important; /* background color for forms and input areas */
-color: #ddd !important; /* text color for forms and input areas */
+background-color: rgb(51, 51, 51) !important; /* background color for forms and input areas */
+color: rgb(221, 221, 221) !important; /* text color for forms and input areas */
 }
 
 button, btn, .button, .btn {
-background-color: #444 !important; /* background color for buttons */
-border-color: #97a2ff !important; /* border color for buttons */
+background-color: rgb(68, 68, 68) !important; /* background color for buttons */
+border-color: rgba(151, 162, 255, 1) !important; /* border color for buttons */
 border-width: 2px !important; /* 2 pixel border width for buttons */
-color: gold !important; /* color for text on buttons */
+color: rgba(255, 217, 0, 1) !important; /* color for text on buttons */
 }
 
 a:link, .a:link {
-color: #eee !important; /* color for unvisited links */
-border-bottom: gold 1px solid !important; /* add underline to all clickable links */
+color: rgb(238, 238, 238) !important; /* color for unvisited links */
+border-bottom: rgba(255, 217, 0, 1) 1px solid !important; /* add underline to all clickable links */
 }
 
 a:visited, .a:visited {
-color: lightgreen !important; /* color for visited links */
+color: rgba(144, 238, 144, 1) !important; /* color for visited links */
 }
 
 a:hover, .a:hover {
-color: orange !important; /* color for links that mouse hovers over them */
+color: rgba(255, 166, 0, 1) !important; /* color for links that mouse hovers over them */
 }
 
 a:active, .a:active {
-color: yellow !important; /* color for links that you clicked but haven't let go of the left mouse button */
+color: rgba(255, 255, 0, 1) !important; /* color for links that you clicked but haven't let go of the left mouse button */
 } 
 
 /* @-moz-document domain("odysee.com"), domain("youtube.com") {
