--- a/userContent.css
+++ b/userContent.css
@@ -33,8 +33,8 @@ color: rgb(221, 221, 221) !important; /* color for all tables */
 
 img, .img {
 filter: brightness(.75) !important; /* make all images have 75% brightness */
-background: rgb(17, 17, 17)!important; /* background color of loading images (not all images use this) */
-background-color: rgb(17, 17, 17) !important; /* background color of loading images (not all images use this) */
+background: rgba(17, 17, 17, 0.1)!important; /* background color of loading images (not all images use this) */
+background-color: rgba(17, 17, 17, 0.1) !important; /* background color of loading images (not all images use this) */
 }
 
 /* img:hover { */
