remove styling from h3 to h6
the h3 tags are widely used in search engines like google and duckduckgo so i want to remove them so we can easily understand what links we have clicked before, header tags 4 5 and 6 are really small and it doesn't matter if we style them or not so i removed them as well

--- a/userContent.css
+++ b/userContent.css
@@ -18,7 +18,7 @@ b, em, i, mark, u, .em, .b, .i, .mark, .u {
 color: rgba(255, 171, 171, 1) !important; /* color for bold text and glyphs */
 }
 
-h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+h1, h2, .h1, .h2 {
 color: rgba(133, 227, 255, 1) !important; /* color for all header sizes */
 }
 
