add styling for span tags
just a little brighter than background color

--- a/userContent.css
+++ b/userContent.css
@@ -10,7 +10,11 @@ p {
 color: rgb(221, 221, 221) !important; /* text color */
 }
 
-b, em, i, mark, u, em {
+span {
+background-color: rgb(51, 51, 51) !important; /* shows the invisible spans of content that are related to eachother */
+}
+
+b, em, i, mark, u, em, small {
 color: rgba(255, 171, 171, 1) !important; /* color for bold text and glyphs */
 }
 
