--- a/userContent.css
+++ b/userContent.css
@@ -14,12 +14,7 @@ span {
 background-color: rgb(51, 51, 51) !important; /* shows the invisible spans of content that are related to eachother */
 }
 
-mark, marker {
-background-color: rgb(34, 34, 34) !important; /* background color for marked areas */
-color: rgb(221, 221, 221) !important; /* color for marked areas */
-}
-
-b, em, i, mark, u, em, small {
+b, em, i, u, em, small {
 color: rgba(255, 171, 171, 1) !important; /* color for bold text and glyphs */
 }
 
@@ -47,7 +42,7 @@ background-color: rgba(17, 17, 17, 0.1) !important; /* background color of loadi
 /* filter: brightness(1) !important */
 /* } */
 
-code, blockquote, q, nav, sup, sub, strong {
+code, blockquote, q, nav, sup, sub, strong, mark, marker {
 background-color: rgb(51, 51, 51) !important; /* background color for code snippets and quotes */
 color: rgba(255, 217, 0, 1) !important; /* color for code snippets and quotes */
 }
