add hue-rotate to correct spell check color
the inverting color used to make forms dark made the red spell check color blue, this hue-rotate filter fixes that

--- a/userContent.css
+++ b/userContent.css
@@ -53,7 +53,7 @@ color: rgb(221, 221, 221) !important; /* text color for forms and input areas */
 }
 
 textarea, input {
-filter: invert(75%) !important;
+filter: invert(75%) hue-rotate(180deg) !important;
 }
 
 button, .btn {
