--- a/userContent.css
+++ b/userContent.css
@@ -75,6 +75,10 @@ a:hover {
 color: rgba(255, 166, 0, 1) !important; /* color for links that mouse hovers over them */
 }
 
-a:focus, a:active {
+/* a:focus {
+color: rgba(255, 255, 0, 1) !important;
+} */
+
+a:active {
 color: rgba(255, 255, 0, 1) !important; /* color for links that you clicked but haven't let go of the left mouse button */
 }
