--- a/userContent.css
+++ b/userContent.css
@@ -50,10 +50,14 @@ color: rgba(255, 217, 0, 1) !important; /* color for code snippets and quotes + 
 label, form, select, dialog {
 background-color: rgb(51, 51, 51) !important; /* background color for forms and input areas + */
 color: rgb(221, 221, 221) !important; /* text color for forms and input areas + */
+border-color: rgb(187, 187, 187) !important; /* border color */
+border-width: 1px !important; /* add 1 pixel width border */
 }
 
 textarea, input {
 filter: invert(75%) hue-rotate(180deg) !important; /* invert some forms and text areas that don't properly take background color */
+border-color: rgb(68, 68, 68) !important; /* border color */
+border-width: 1px !important; /* add 1 pixel width border */
 }
 
 button, .btn {
