--- a/userContent.css
+++ b/userContent.css
@@ -32,15 +32,16 @@ color: rgb(221, 221, 221) !important; /* color for all tables + */
 }
 
 img {
-filter: brightness(.75) !important; /* make all images have 75% brightness */
+filter: brightness(80%) !important; /* make all images have 75% brightness */
 background: rgba(17, 17, 17, 0.1)!important; /* background color of loading images (not all websites/images use this) */
 background-color: rgba(17, 17, 17, 0.1) !important; /* background color of loading images (not all websites/images use this) */
+transition: ease 0.5s !important;
 }
 
-/* img:hover { */
-/* transition: 0.5s !important; */
-/* filter: brightness(1) !important */
-/* } */
+img:hover {
+transition: ease 0.5s !important;
+filter: brightness(100%) !important
+}
 
 code, blockquote, q, nav, sup, sub, strong, mark, marker {
 background-color: rgb(51, 51, 51) !important; /* background color for code snippets and quotes + */
