change span color to a be brighter w/ less alpha
this should make the page content more visible on those extremely cluttered websites, the overall look hasn't really changed that much

--- a/userContent.css
+++ b/userContent.css
@@ -17,7 +17,7 @@ color: rgb(221, 221, 221) !important; /* text color */
 }
 
 span {
-background-color: rgb(51, 51, 51) !important; /* shows the invisible spans of content that are related to each-other */
+background-color: rgba(200, 200, 200, 0.1) !important; /* shows the invisible spans of content that are related to each-other */
 }
 
 b, em, i, u, em, small {
