--- a/userContent.css
+++ b/userContent.css
@@ -91,8 +91,17 @@ color: rgb(255, 255, 0) !important; /* color for links that you clicked but have
 
 /* below lines are for styling about pages in firefox */
 @-moz-document url-prefix("about:") {
-*:not(.checkbox-check, input, [class*='button-']) {
+html, body, div {
 background-color: rgba(34, 34, 34, 0.01) !important;
 background: rgba(34, 34, 34, 0.01) !important;
 background-image: linear-gradient(rgb(34, 34, 34),rgb(34, 34, 34)) !important;}
+}
+
+/* style these three pages seperately than other about:pages */
+@-moz-document regexp("^about:(downloads|logins|preferences).*") {
+*:not(.checkbox-check, input, button, [class*='button-']) {
+background-color: rgba(34, 34, 34, 0.01) !important;
+background: rgba(34, 34, 34, 0.01) !important;
+background-image: linear-gradient(rgb(34, 34, 34),rgb(34, 34, 34)) !important;
+color: rgb(221, 221, 221) !important; }
 }
