--- a/userContent-grayscale.css
+++ b/userContent-grayscale.css
@@ -56,10 +56,10 @@ border-width: 1px !important; /* add 1 pixel width border */
 -moz-appearance: none !important;
 }
 
-input:is([type="checkbox"], [type="radio"], [type="reset"], [type="button"], [type="submit"]), input {
+input:is([type="checkbox"], [type="radio"], [type="reset"], [type="button"], [type="submit"]) {
 background-color: rgb(204, 204, 204) !important;
 color: rgb(34, 34, 34) !important;
-filter: invert(80%) hue-rotate(180deg) !important;
+filter: invert(100%) hue-rotate(180deg) !important;
 }
 
 button, .btn {
