fix devtools to exclude span color
after some searching i found the pages that applies styling to dev tools widnows and excluded span background from applying to them, it's now completely useable

--- a/userContent-grayscale.css
+++ b/userContent-grayscale.css
@@ -110,3 +110,8 @@ background: rgba(34, 34, 34, 0.01) !important;
 background-image: linear-gradient(rgb(34, 34, 34),rgb(34, 34, 34)) !important;
 color: rgb(221, 221, 221) !important; }
 }
+
+/* exclude the devtools windows from applying span colors */
+@-moz-document url("about:devtools-toolbox"), url-prefix("chrome://devtools/content/") {
+span { background-color: unset !important; }
+}
