--- a/userContent.css
+++ b/userContent.css
@@ -15,7 +15,6 @@ p {
 color: rgb(221, 221, 221) !important; /* text color */
 }
 
-/* remove this span tag if you have to work with the developers tools window, unfortunently i don't know how to exclude it */
 span {
 background-color: rgba(216, 216, 216, 0.1) !important; /* shows the invisible spans of content that are related to each-other */
 }
@@ -110,4 +109,9 @@ background-color: rgba(34, 34, 34, 0.01) !important;
 background: rgba(34, 34, 34, 0.01) !important;
 background-image: linear-gradient(rgb(34, 34, 34),rgb(34, 34, 34)) !important;
 color: rgb(221, 221, 221) !important; }
+}
+
+/* exclude the devtools windows from applying span colors */
+@-moz-document url("about:devtools-toolbox"), url-prefix("chrome://devtools/content/") {
+span { background-color: unset !important; }
 }
